# CPU-Scheduling-Algorithms

./: CMakeLists.txt  README.md  main.c  run_linux.sh  run_tests.sh  run_windows.bat
algos/: FCFS.c  FCFS.h  RoundRobin.c  RoundRobin.h  SJF.c  SJF.h  SRTF.c  SRTF.h
structures/: heap.c  heap.h  myProcess.c  myProcess.h  queue.c  queue.h
tests/: tests_fcfs.c  tests_rr.c  tests_sjf.c  tests_srtf.c
utils/: utils.c  utils.h
